--- a/index.html
+++ b/index.html
@@ -203,13 +203,14 @@
     </section>
     <section style="padding-bottom: 100px;" class="settings center" id ="settings">
       <h2 class="heading heading__settings">С ИНДИВИДУАЛЬНЫМИ НАСТРОЙКАМИ</h2>
-      <p style="width: 958px; margin: auto;" class="text text_margin text_settings-p">Мышь MX Master 3 адаптируется под ваши рабочие процессы. Благодаря
+      <p style="margin: auto;" class="text text_margin text_settings-p">Мышь MX Master 3 адаптируется под ваши рабочие процессы. Благодаря
         индивидуальным настройкам, вы сможете настроить кнопки и жесты практически
         под любое используемое приложение.</p>
         <div class="settings__slider-img">
           <img style="display: flex; justify-content: center;margin-top: 71px;" src="744aa55 1.png" alt="">
         </div>
-        <div style="display: none;" id="settings-slider" class="carousel slide settings__slider" data-bs-ride="carousel">
+
+        <div id="settings-slider" class="carousel slide settings__slider" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="settings-slider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="settings-slider" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -258,12 +259,12 @@
     <section style="background-repeat: no-repeat;" class="mouse mouse__center">
       <div class="mouse__item  mouse__text mouse__text_1" id="mouse1">
        <h2 class="heading1 heading">КОМФОРТНО. ЭРГОНОМИЧНО. ИНТУИТИВНО.</h2>
-       <p style="text-align: left;" class="text text_margin">Дизайн мыши MX Master 3 разработан так, чтобы с точностью повторять форму вашей ладони. Но не менее важны колесико прокрутки для большого пальца и расположение кнопок жестов, с которыми вы будете творить уверенно как никогда.</p>
+       <p class="text text_margin">Дизайн мыши MX Master 3 разработан так, чтобы с точностью повторять форму вашей ладони. Но не менее важны колесико прокрутки для большого пальца и расположение кнопок жестов, с которыми вы будете творить уверенно как никогда.</p>
      </div> 
      <div style="background-repeat: no-repeat;" class="mouse__item mouse__img mouse__img_1"></div>
      <div class="mouse__item mouse__text mouse__text_2" id ="mouse2">
        <h2 class="heading2 heading">БЫСТРЕЕ,ЧЕМ КОГДА-ЛИБО</h2>
-       <p style="text-align: right;" class="text text_margin">Компьютерная мышь MX Master 3 предлагает ультимативный механизм прокрутки со скоростью 1000 строк за 1 секунду. С точностью до пикселя. Бесшумно.</p>     
+       <p class="text text_margin">Компьютерная мышь MX Master 3 предлагает ультимативный механизм прокрутки со скоростью 1000 строк за 1 секунду. С точностью до пикселя. Бесшумно.</p>     
      </div>
      <div style="background-repeat: no-repeat;" class="mouse__item mouse__img mouse__img_2"></div>
  
